Added a ChatGPT generated test